@@ -1,5 +1,6 @@
 *Version 3.7.5*
 * Fix bug in upgrade to 3.7.0 that would create invalid email addresses out of the duplicates.
+* Fix bug where only the first global script JSON import would work
 
 *Version 3.7.4*
 * Improve work item failure logging
